--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ node_js:
   - "8"
   - "9"
   - "10"
-# - "11" not used yet => Lerna stack overflows!
+  # - "11" not used yet => Lerna stack overflows!
 
 os:
   - linux
@@ -37,8 +37,8 @@ before_install:
        sudo sysctl -w kern.maxfilesperproc=20000;
        sudo serverinfo --setperfmode true;
        sudo ulimit -c unlimited;
-    sudo ulimit -n unlimited;
-    sudo ulimit -l unlimited;
+       sudo ulimit -n unlimited;
+       sudo ulimit -l unlimited;
        sudo ulimit -a;
     fi;
   - if [[ $TRAVIS_OS_NAME =~ ^osx$ ]]; then
@@ -78,7 +78,7 @@ after_success:
       if [[ $TRAVIS_NODE_VERSION =~ ^10$ ]]; then
           # make test-cov;
           # codecov
-          istanbul cover--report lcovonly packages\run_all_mocha_tests.js && codecov
+          istanbul cover--report lcovonly packages/run_all_mocha_tests.js && codecov
       fi;
     fi;
 
@@ -87,18 +87,14 @@ script:
     then  npm test ;
     else  npm test;
     fi
-  - lerna run test-typescript
+    lerna run test-typescript
 
 addons:
-  code_climate:
-    repo_token: 0860a573fd01a1fbafc298b7c40cd0c1fd8b25e5f53a5e8346d3b42cb40ab48e
-
-
 
 notifications:
   webhooks:
     urls:
-      https://webhooks.gitter.im/e/4d51130aaea652dbc8f1
+        https://webhooks.gitter.im/e/4d51130aaea652dbc8f1
     on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: true     # default: false
